# the-corners-speak-latin

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
hollow/: Cargo.toml  README.md  output_example.md
hollow-api/: Cargo.toml  README.md  index.html
hollow-api/src/: main.rs
hollow-api/static/: style.css
hollow-cli/: Cargo.toml  README.md
hollow-cli/src/: main.rs
hollow-discord-bot/: Cargo.toml  README.md
hollow-discord-bot/src/: main.rs
hollow/src/: lib.rs
