[package]
name = "hollow-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hollow = { version = "0.3.1", path = "../hollow" }
serenity = { version = "0.11.7", default-features = false, features = [
    "gateway",
    "client",
    "model",
    "rustls_backend",
] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
