[package]
name = "hollow"
version = "0.3.2"
edition = "2021"
authors = ["fruit-bird"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
google_translator = { git = "https://github.com/Eveheeero/Eveheeero" }
rand = "0.8.5"
reqwest = "0.11.18"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros"] }
